tests/security/taintIntoExecMultipleConcat/output.txt
ERROR: TaintedData - input.hack:3:10 - Detected tainted shell code